src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__pipe_expr.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Binary {
                                    op: Pipe,
                                    left: Expr {
                                        kind: Binary {
                                            op: Pipe,
                                            left: Expr {
                                                kind: Binary {
                                                    op: Pipe,
                                                    left: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 2,
                                                                            },
                                                                            span: Span {
                                                                                start: 9,
                                                                                end: 13,
                                                                                start_line: 1,
                                                                                start_col: 10,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 9,
                                                                    end: 13,
                                                                    start_line: 1,
                                                                    start_col: 10,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 9,
                                                            end: 13,
                                                            start_line: 1,
                                                            start_col: 10,
                                                        },
                                                    },
                                                    right: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 3,
                                                                            },
                                                                            span: Span {
                                                                                start: 17,
                                                                                end: 26,
                                                                                start_line: 1,
                                                                                start_col: 18,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 17,
                                                                    end: 26,
                                                                    start_line: 1,
                                                                    start_col: 18,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 17,
                                                            end: 26,
                                                            start_line: 1,
                                                            start_col: 18,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 9,
                                                    end: 26,
                                                    start_line: 1,
                                                    start_col: 10,
                                                },
                                            },
                                            right: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 4,
                                                                    },
                                                                    span: Span {
                                                                        start: 30,
                                                                        end: 36,
                                                                        start_line: 1,
                                                                        start_col: 31,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 30,
                                                            end: 36,
                                                            start_line: 1,
                                                            start_col: 31,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 30,
                                                    end: 36,
                                                    start_line: 1,
                                                    start_col: 31,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 9,
                                            end: 36,
                                            start_line: 1,
                                            start_col: 10,
                                        },
                                    },
                                    right: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 5,
                                                            },
                                                            span: Span {
                                                                start: 40,
                                                                end: 47,
                                                                start_line: 1,
                                                                start_col: 41,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 40,
                                                    end: 47,
                                                    start_line: 1,
                                                    start_col: 41,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 40,
                                            end: 47,
                                            start_line: 1,
                                            start_col: 41,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 9,
                                    end: 47,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 49,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 49,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 49,
        start_line: 1,
        start_col: 1,
    },
}
