src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__pub_crate_visibility.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: PublicCrate,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 14,
                        end: 22,
                        start_line: 1,
                        start_col: 15,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: None,
                        span: Span {
                            start: 25,
                            end: 27,
                            start_line: 1,
                            start_col: 26,
                        },
                    },
                ),
                span: Span {
                    start: 11,
                    end: 27,
                    start_line: 1,
                    start_col: 12,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 27,
        start_line: 1,
        start_col: 1,
    },
}
