src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__pub_self_visibility.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Const(
            ConstDecl {
                attrs: [],
                vis: PublicSelf,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 16,
                        end: 23,
                        start_line: 1,
                        start_col: 17,
                    },
                },
                ty: Type {
                    kind: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 25,
                                            end: 28,
                                            start_line: 1,
                                            start_col: 26,
                                        },
                                    },
                                    args: None,
                                },
                            ],
                            span: Span {
                                start: 25,
                                end: 28,
                                start_line: 1,
                                start_col: 26,
                            },
                        },
                    ),
                    span: Span {
                        start: 25,
                        end: 28,
                        start_line: 1,
                        start_col: 26,
                    },
                },
                value: Expr {
                    kind: Literal(
                        Literal {
                            kind: Int {
                                value: 0,
                                suffix: None,
                            },
                            span: Span {
                                start: 31,
                                end: 32,
                                start_line: 1,
                                start_col: 32,
                            },
                        },
                    ),
                    span: Span {
                        start: 31,
                        end: 32,
                        start_line: 1,
                        start_col: 32,
                    },
                },
                span: Span {
                    start: 10,
                    end: 33,
                    start_line: 1,
                    start_col: 11,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 33,
        start_line: 1,
        start_col: 1,
    },
}
