src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__pub_super_visibility.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Struct(
            StructDecl {
                attrs: [],
                vis: PublicSuper,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 18,
                        end: 31,
                        start_line: 1,
                        start_col: 19,
                    },
                },
                type_params: None,
                body: Record(
                    [
                        StructField {
                            attrs: [],
                            vis: Private,
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 2,
                                },
                                span: Span {
                                    start: 34,
                                    end: 35,
                                    start_line: 1,
                                    start_col: 35,
                                },
                            },
                            ty: Type {
                                kind: Path(
                                    TypePath {
                                        segments: [
                                            TypePathSegment {
                                                name: Spanned {
                                                    node: SymbolU32 {
                                                        value: 3,
                                                    },
                                                    span: Span {
                                                        start: 37,
                                                        end: 40,
                                                        start_line: 1,
                                                        start_col: 38,
                                                    },
                                                },
                                                args: None,
                                            },
                                        ],
                                        span: Span {
                                            start: 37,
                                            end: 40,
                                            start_line: 1,
                                            start_col: 38,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 37,
                                    end: 40,
                                    start_line: 1,
                                    start_col: 38,
                                },
                            },
                            span: Span {
                                start: 34,
                                end: 40,
                                start_line: 1,
                                start_col: 35,
                            },
                        },
                    ],
                ),
                span: Span {
                    start: 11,
                    end: 42,
                    start_line: 1,
                    start_col: 12,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 42,
        start_line: 1,
        start_col: 1,
    },
}
