src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__pure_effect.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 10,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 2,
                                    },
                                    span: Span {
                                        start: 11,
                                        end: 12,
                                        start_line: 1,
                                        start_col: 12,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 11,
                                end: 12,
                                start_line: 1,
                                start_col: 12,
                            },
                        },
                        ty: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 14,
                                                    end: 17,
                                                    start_line: 1,
                                                    start_col: 15,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 14,
                                        end: 17,
                                        start_line: 1,
                                        start_col: 15,
                                    },
                                },
                            ),
                            span: Span {
                                start: 14,
                                end: 17,
                                start_line: 1,
                                start_col: 15,
                            },
                        },
                        span: Span {
                            start: 11,
                            end: 17,
                            start_line: 1,
                            start_col: 12,
                        },
                    },
                ],
                return_type: Some(
                    Type {
                        kind: Path(
                            TypePath {
                                segments: [
                                    TypePathSegment {
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 3,
                                            },
                                            span: Span {
                                                start: 22,
                                                end: 25,
                                                start_line: 1,
                                                start_col: 23,
                                            },
                                        },
                                        args: None,
                                    },
                                ],
                                span: Span {
                                    start: 22,
                                    end: 25,
                                    start_line: 1,
                                    start_col: 23,
                                },
                            },
                        ),
                        span: Span {
                            start: 22,
                            end: 25,
                            start_line: 1,
                            start_col: 23,
                        },
                    },
                ),
                effects: Some(
                    EffectRow {
                        kind: Pure,
                        span: Span {
                            start: 28,
                            end: 32,
                            start_line: 1,
                            start_col: 29,
                        },
                    },
                ),
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Binary {
                                    op: Mul,
                                    left: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 35,
                                                                end: 36,
                                                                start_line: 1,
                                                                start_col: 36,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 35,
                                                    end: 36,
                                                    start_line: 1,
                                                    start_col: 36,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 35,
                                            end: 36,
                                            start_line: 1,
                                            start_col: 36,
                                        },
                                    },
                                    right: Expr {
                                        kind: Literal(
                                            Literal {
                                                kind: Int {
                                                    value: 2,
                                                    suffix: None,
                                                },
                                                span: Span {
                                                    start: 39,
                                                    end: 40,
                                                    start_line: 1,
                                                    start_col: 40,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 39,
                                            end: 40,
                                            start_line: 1,
                                            start_col: 40,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 35,
                                    end: 40,
                                    start_line: 1,
                                    start_col: 36,
                                },
                            },
                        ),
                        span: Span {
                            start: 33,
                            end: 42,
                            start_line: 1,
                            start_col: 34,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 42,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 42,
        start_line: 1,
        start_col: 1,
    },
}
